[project]
name = "inkscape-speleo"
version = "1.9"
description = "Inkscape extensions for cave surveying"
authors = [
    {name = "Thomas Holder"},
]
requires-python = ">=3.7"
dynamic = ["dependencies"]

[project.urls]
repository = "https://github.com/speleo3/inkscape-speleo"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["extensions"]

[tool.yapf]
column_limit = 88
based_on_style = "pep8"
allow_split_before_dict_value = false
each_dict_entry_on_separate_line = false


[tool.ruff]
extend-select = ["W", "B", "Q003"]
ignore = [
    "E401",     # Multiple imports on one line
    "E501",     # Line too long
    "E731",     # lambda-assignment
    "W191",     # Indentation contains tabs
    "W293",     # Blank line contains whitespace
]

[tool.pytest.ini_options]
addopts = "--strict-markers"
pythonpath = ["extensions"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["extensions"]

[tool.mypy]
files = [
    "extensions",
    "tests",
]
ignore_missing_imports = true
explicit_package_bases = true

# vi:sw=4
